[ADDED] complex loader
Former-commit-id: ea95d5ca1d7a08765860a3e30f38b84d087eeb78

--- a/glue/platform/msvc2008/projects/glue.vcproj
+++ b/glue/platform/msvc2008/projects/glue.vcproj
@@ -467,11 +467,19 @@
 				Name="06.complex"
 				>
 				<File
-					RelativePath="..\..\..\source\sprite\ComplexSymbol.cpp"
+					RelativePath="..\..\..\source\sprite\ComplexSprLoader.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\include\glue\ComplexSymbol.h"
+					RelativePath="..\..\..\include\glue\ComplexSprLoader.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\source\sprite\ComplexSymLoader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\glue\ComplexSymLoader.h"
 					>
 				</File>
 			</Filter>
