[ADDED] anim loader
Former-commit-id: 680c462a29989f3a4d4735de1e883a087d5aeba9

--- a/glue/platform/msvc2008/projects/glue.vcproj
+++ b/glue/platform/msvc2008/projects/glue.vcproj
@@ -483,6 +483,26 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="07.animation"
+				>
+				<File
+					RelativePath="..\..\..\source\sprite\AnimSprLoader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\glue\AnimSprLoader.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\source\sprite\AnimSymLoader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\glue\AnimSymLoader.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="adapter"
