--- a/glue/platform/msvc2008/projects/test.vcproj
+++ b/glue/platform/msvc2008/projects/test.vcproj
@@ -246,6 +246,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\sample\TestParticle2d.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\sample\TestParticle2d.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\sample\TestParticle3d.cpp"
 				>
 			</File>
