[ADDED] trail loader
Former-commit-id: d5e7eaa2be24cf640a75e8bda129ff627f30a503

--- a/glue/platform/msvc2008/projects/test.vcproj
+++ b/glue/platform/msvc2008/projects/test.vcproj
@@ -269,6 +269,14 @@
 				RelativePath="..\..\..\sample\TestScale9.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\sample\TestTrail.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\sample\TestTrail.h"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath="..\..\..\sample\main.cpp"
