[ADDED] mask loader
Former-commit-id: ee2f2053f99773566052f7ebf6038cac036420e4

--- a/glue/platform/msvc2008/projects/glue.vcproj
+++ b/glue/platform/msvc2008/projects/glue.vcproj
@@ -562,6 +562,14 @@
 			<Filter
 				Name="12.mask"
 				>
+				<File
+					RelativePath="..\..\..\source\sprite\MaskSymLoader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\glue\MaskSymLoader.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="13.trail"
