[ADDED] mesh loader
Former-commit-id: a734f796389b6d9b7449ad99f48b6fadd63921cc

--- a/glue/platform/msvc2008/projects/glue.vcproj
+++ b/glue/platform/msvc2008/projects/glue.vcproj
@@ -558,6 +558,22 @@
 			<Filter
 				Name="11.mesh"
 				>
+				<File
+					RelativePath="..\..\..\source\sprite\MeshSprLoader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\glue\MeshSprLoader.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\source\sprite\MeshSymLoader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\glue\MeshSymLoader.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="12.mask"
