--- a/glue/platform/msvc2008/projects/test.vcproj
+++ b/glue/platform/msvc2008/projects/test.vcproj
@@ -254,6 +254,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\sample\TestMesh.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\sample\TestMesh.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\sample\TestParticle2d.cpp"
 				>
 			</File>
