[ADDED] lr check for store
Former-commit-id: c017a7ea840db1dcb4d985321275e6f3364b3fe2

--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -186,6 +186,14 @@
 			Name="frame"
 			>
 			<File
+				RelativePath="..\..\..\src\lr\frame\CheckForStore.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\lr\frame\CheckForStore.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\lr\frame\config.h"
 				>
 			</File>
