--- a/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
+++ b/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\..\easyeditor\include;..\..\..\..\sprite2\include;..\..\..\..\gum\include;..\..\..\..\sm\src\sm;..\..\..\..\cu\src\cu;..\..\..\..\mtrail\src\mtrail;..\..\..\..\simp\src\simp;..\..\..\..\dtex\src;..\..\..\..\easy3d\src\easy3d;..\..\..\..\ejoy2d\src\;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easyui\src;..\..\..\..\easyscale9\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easymask\src;..\..\..\..\easyimage\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easyshape\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\particle\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easytrail\src;..\..\..\..\easytext\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\lzma\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\easyeditor\include;..\..\..\..\sprite2\include;..\..\..\..\gum\include;..\..\..\..\sm\src\sm;..\..\..\..\cu\src\cu;..\..\..\..\mtrail\src\mtrail;..\..\..\..\simp\include;..\..\..\..\dtex\src;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easyrespacker\src;..\..\..\..\ejoy2d\src\;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easyui\src;..\..\..\..\easyscale9\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easymask\src;..\..\..\..\easyimage\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easyshape\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\particle\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easytrail\src;..\..\..\..\easytext\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\lzma\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EASY_EDITOR"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -107,7 +107,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\..\easyeditor\include;..\..\..\..\sprite2\include;..\..\..\..\gum\include;..\..\..\..\sm\src\sm;..\..\..\..\cu\src\cu;..\..\..\..\mtrail\src\mtrail;..\..\..\..\simp\src\simp;..\..\..\..\dtex\src;..\..\..\..\easy3d\src\easy3d;..\..\..\..\ejoy2d\src\;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easyui\src;..\..\..\..\easyscale9\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easymask\src;..\..\..\..\easyimage\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easyshape\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\particle\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easytrail\src;..\..\..\..\easytext\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\lzma\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\easyeditor\include;..\..\..\..\sprite2\include;..\..\..\..\gum\include;..\..\..\..\sm\src\sm;..\..\..\..\cu\src\cu;..\..\..\..\mtrail\src\mtrail;..\..\..\..\simp\include;..\..\..\..\dtex\src;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easyrespacker\src;..\..\..\..\ejoy2d\src\;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easyui\src;..\..\..\..\easyscale9\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easymask\src;..\..\..\..\easyimage\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easyshape\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\particle\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easytrail\src;..\..\..\..\easytext\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\lzma\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EASY_EDITOR"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -152,6 +152,14 @@
 		<Filter
 			Name="nodes"
 			>
+			<File
+				RelativePath="..\..\..\src\libsprpacker\PackNode.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsprpacker\PackNode.h"
+				>
+			</File>
 			<Filter
 				Name="01.image"
 				>
@@ -161,18 +169,6 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\libsprpacker\PackImage.h"
-					>
-				</File>
-			</Filter>
-			<Filter
-				Name="00.base"
-				>
-				<File
-					RelativePath="..\..\..\src\libsprpacker\PackNode.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\libsprpacker\PackNode.h"
 					>
 				</File>
 			</Filter>
@@ -249,6 +245,14 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\libsprpacker\PackComplex.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\PackComplexSpr.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\PackComplexSpr.h"
 					>
 				</File>
 			</Filter>
@@ -367,6 +371,22 @@
 			<Filter
 				Name="06.complex"
 				>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\ComplexBuilder.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\ComplexBuilder.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\ComplexSprBuilder.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\ComplexSprBuilder.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="07.animation"
@@ -385,11 +405,35 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libsprpacker\Packer.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsprpacker\Packer.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libsprpacker\PackNodeFactory.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\..\..\src\libsprpacker\PackNodeFactory.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsprpacker\PackToBin.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsprpacker\PackToBin.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsprpacker\PackToLua.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsprpacker\PackToLua.h"
 				>
 			</File>
 		</Filter>
