--- a/simp/platform/msvc2008/projects/simp.vcproj
+++ b/simp/platform/msvc2008/projects/simp.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\include\simp;..\..\..\..\logger\src\logger;..\..\..\..\cu\src\cu;..\..\..\..\editor-external\c99"
+				AdditionalIncludeDirectories="..\..\..\include\simp;..\..\..\..\logger\src\logger;..\..\..\..\fs\src\fs;..\..\..\..\cu\src\cu;..\..\..\..\editor-external\c99;..\..\..\..\editor-external\lzma\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EASY_EDITOR"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\include\simp;..\..\..\..\logger\src\logger;..\..\..\..\cu\src\cu;..\..\..\..\editor-external\c99"
+				AdditionalIncludeDirectories="..\..\..\include\simp;..\..\..\..\logger\src\logger;..\..\..\..\fs\src\fs;..\..\..\..\cu\src\cu;..\..\..\..\editor-external\c99;..\..\..\..\editor-external\lzma\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EASY_EDITOR"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -148,6 +148,14 @@
 		<Filter
 			Name="storage"
 			>
+			<File
+				RelativePath="..\..\..\source\FileLoader.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\simp\FileLoader.h"
+				>
+			</File>
 			<File
 				RelativePath="..\..\..\source\NodeFactory.cpp"
 				>
