[CHANGED] create spr from binary res
Former-commit-id: 27e14fedb6cbe4e92dc59ddaf6476324087cf277

--- a/gum/platform/msvc2008/projects/gum.vcproj
+++ b/gum/platform/msvc2008/projects/gum.vcproj
@@ -232,14 +232,6 @@
 			Name="dataset"
 			>
 			<File
-				RelativePath="..\..\..\source\dataset\Package.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\include\gum\Package.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\include\gum\Resource.h"
 				>
 			</File>
@@ -376,6 +368,14 @@
 				</File>
 				<File
 					RelativePath="..\..\..\include\gum\ImageSymbolOld.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\source\sprite\ImageSymLoader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\gum\ImageSymLoader.h"
 					>
 				</File>
 			</Filter>
