--- a/simp/platform/msvc2008/projects/simp.vcproj
+++ b/simp/platform/msvc2008/projects/simp.vcproj
@@ -165,6 +165,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\include\simp\NodeFactory.inl"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\source\Package.cpp"
 				>
 			</File>
