[ADDED] spr trans
Former-commit-id: ff4cdfe11395ab58289a8ca11244488143144ffa

--- a/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
+++ b/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
@@ -160,6 +160,14 @@
 				RelativePath="..\..\..\src\libsprpacker\PackNode.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\libsprpacker\PackTrans.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsprpacker\PackTrans.h"
+				>
+			</File>
 			<Filter
 				Name="01.image"
 				>
