--- a/gum/platform/msvc2008/projects/gum.vcproj
+++ b/gum/platform/msvc2008/projects/gum.vcproj
@@ -336,6 +336,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\source\sprite\SprTransLoader.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\gum\SprTransLoader.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\source\sprite\SymbolFactory.cpp"
 				>
 			</File>
