[ADDED] pack complex
Former-commit-id: 9940a8873792231d17576587770aedbc10e68343

--- a/gum/platform/msvc2008/projects/test.vcproj
+++ b/gum/platform/msvc2008/projects/test.vcproj
@@ -305,6 +305,14 @@
 				Name="pack"
 				>
 				<File
+					RelativePath="..\..\..\test\TestPackComplex.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\test\TestPackComplex.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\test\TestPackTrans.cpp"
 					>
 				</File>
