[ADDED] pack label
Former-commit-id: e257e2e0494df46b253d4099217da50ecf4e8cab

--- a/simp/platform/msvc2008/projects/simp.vcproj
+++ b/simp/platform/msvc2008/projects/simp.vcproj
@@ -221,6 +221,10 @@
 			Name="node"
 			>
 			<File
+				RelativePath="..\..\..\include\simp\from_int.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\source\NodeTrans.cpp"
 				>
 			</File>
