[ADDED] heat haze filter's prop setting
Former-commit-id: 01745730dc808f5a4a5d53ef16d3c633a864f7f9

--- a/easyeditor/platform/msvc2008/projects/libgui.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libgui.vcproj
@@ -294,6 +294,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\source\gui\FilepathProperty.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\FilepathProperty.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\source\gui\MyColorProperty.cpp"
 				>
 			</File>
