--- a/simp/platform/msvc2008/projects/simp.vcproj
+++ b/simp/platform/msvc2008/projects/simp.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\include\simp;..\..\..\..\logger\src\logger;..\..\..\..\fs\src\fs;..\..\..\..\sm\src\sm;..\..\..\..\cu\src\cu;..\..\..\..\particle\src;..\..\..\..\editor-external\c99;..\..\..\..\editor-external\lzma\include"
+				AdditionalIncludeDirectories="..\..\..\include\simp;..\..\..\..\logger\src\logger;..\..\..\..\fs\src\fs;..\..\..\..\sm\src\sm;..\..\..\..\cu\src\cu;..\..\..\..\particle\src;..\..\..\..\mtrail\src\mtrail;..\..\..\..\editor-external\c99;..\..\..\..\editor-external\lzma\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EASY_EDITOR"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\include\simp;..\..\..\..\logger\src\logger;..\..\..\..\fs\src\fs;..\..\..\..\sm\src\sm;..\..\..\..\cu\src\cu;..\..\..\..\particle\src;..\..\..\..\editor-external\c99;..\..\..\..\editor-external\lzma\include"
+				AdditionalIncludeDirectories="..\..\..\include\simp;..\..\..\..\logger\src\logger;..\..\..\..\fs\src\fs;..\..\..\..\sm\src\sm;..\..\..\..\cu\src\cu;..\..\..\..\particle\src;..\..\..\..\mtrail\src\mtrail;..\..\..\..\editor-external\c99;..\..\..\..\editor-external\lzma\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EASY_EDITOR"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -385,6 +385,26 @@
 				</File>
 				<File
 					RelativePath="..\..\..\include\simp\NodeParticle2dSpr.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="13.trail"
+				>
+				<File
+					RelativePath="..\..\..\source\NodeTrail.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\simp\NodeTrail.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\source\NodeTrailSpr.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\simp\NodeTrailSpr.h"
 					>
 				</File>
 			</Filter>
